--- a/interactiveenglish.html
+++ b/interactiveenglish.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project</title>
+    <title>Interactive English Learning</title>
     <link rel="stylesheet" href="content/css/style.css"/>
     <link rel="stylesheet" href="content/css/style2.css"/>
     <script src="https://kit.fontawesome.com/511e3fd6cb.js" crossorigin="anonymous"></script>
