--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project</title>
+    <title>Interactive English Learning</title>
     <link rel="stylesheet" href="content/css/style.css"/>
     <link rel="stylesheet" href="content/css/style2.css"/>
     <script src="https://kit.fontawesome.com/511e3fd6cb.js" crossorigin="anonymous"></script>
@@ -135,7 +135,7 @@
                     <p>This project was made for Öğretim Teknolojileri class,<br>during Summer School of Uludağ University.<br>21/08/2021<br><br>
                     <b>Teacher:</b> Prof. Dr. Yunus Alyaz</p>
                     <div>
-                      <br><br>
+                      <br><br><p><b>Technologies used: HTML / CSS / JS / GitHub</b></p>
                       <p><b>Credits:</b></p>
                     <p>- Images from <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
                     <p>- Icons from <a href="https://fontawesome.com/" target="_blank">Font Awesome</a></p>
